release 1.0.1 (2008-11/12)
- Refactored WADL generation classes to be placed in base package:
  com.sun.jersey.server.wadl. Previously WADL generation classes
  were in the base package com.sun.jersey.impl.wadl.
- Fixed issue 144
  https://jersey.dev.java.net/issues/show_bug.cgi?id=144
  Async/WebResource.toString returns a String instance of the URI of
  the Web resource.
- Fixed issue 123
  https://jersey.dev.java.net/issues/show_bug.cgi?id=123
  Reduce the dependencies of the spring module to those which are
  required.
- Fixed issue 133
  https://jersey.dev.java.net/issues/show_bug.cgi?id=133
  Replaced e.printStackTrace() with logging.
- Fixed issue 131
  https://jersey.dev.java.net/issues/show_bug.cgi?id=131
  The use of javax.activation.DataSource no longer depends on the JavaMail jar.
- Fixed issue 143
  https://jersey.dev.java.net/issues/show_bug.cgi?id=143
  Improve error message when @Path value syntax is incorrect and is most likely
  because a path parameter is not terminated with a '}'.
- Enable the injection of of FormDataContentDispostion when using @FormParam
  in conjuction with "multipart/form-data". This enables access to parameters
  on the "form-data" content disposition header such as the value of the
  "filename" parameter.
- The following classes have been modified to include the creation of
  a container with an instance of an IoCContainerProviderFactory:
  - com.sun.jersey.api.container.ContainerFactory
  - com.sun.jersey.api.container.httpserver.HttpServerFactory
  - com.sun.jersey.api.container.grizzly.GrizzlyServerFactory
  A com.sun.jersey.spi.container.ContainerProvider implementaton should not
  initiate the web application, otherwise the IoCContainerProviderFactory
  instance cannot be set.
- The following classes in jersey-core have moved:
  - The following classes in package "com.sun.jersey.api" have moved to
    the package "com.sun.jersey.core.header": InBoundHeaders, MediaTypes and
    OutBoundHeaders.